--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -43,6 +43,13 @@ select {
     font: inherit;
   }
 
+button {
+    display: inline-block;
+    cursor: pointer;
+    appearance: none;
+    border: none;
+}
+
 a {
     text-decoration: none;
     color: inherit;    
