--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,9 +1,20 @@
+html,
+body{
+    height: 100%;
+}
+
 body {
     background-color: #fff;
     font-size: 14px;
     line-height: 1.4;
     color: $default;
     @extend %opensans-500;
+    display: flex;
+    flex-direction: column;
+}
+
+.main{
+    flex-grow: 1;
 }
 
 .container {
