--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -43,6 +43,10 @@ select {
     font: inherit;
   }
 
+address {
+    font-style: normal;
+}
+
 button {
     display: inline-block;
     cursor: pointer;
