added slider mixitup

--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face{
-    font-family: 'Lato-Regular', sans-serif;
+    font-family: 'Lato-Regular';
     font-weight: 500;
     font-style: normal;
     src: local('Lato-Regular'),
@@ -10,7 +10,7 @@
 
 
 @font-face{
-    font-family: 'Lato-Bold', sans-serif;
+    font-family: 'Lato-Bold';
     font-weight: 700;
     font-style: normal;
     src: local('Lato-Bold'),
@@ -21,8 +21,8 @@
 }
 
 @font-face{
-    font-family: 'OpenSans-Regular', sans-serif;
-    font-weight: 500;
+    font-family: 'OpenSans-Regular';
+    font-weight: 400;
     font-style: normal;
     src: local('OpenSans-Regular'),
          url('../fonts/OpenSans-Regular.woff2') format('woff2'),
@@ -31,7 +31,7 @@
 }
 
 @font-face{
-    font-family: 'OpenSans-Light', sans-serif;
+    font-family: 'OpenSans-Light';
     font-weight: 300;
     font-style: normal;
     src: local('OpenSans-Light'),
@@ -41,7 +41,7 @@
 }
 
 @font-face{
-    font-family: 'OpenSans-SemiBold', sans-serif;
+    font-family: 'OpenSans-SemiBold';
     font-weight: 600;
     font-style: normal;
     src: local('OpenSans-SemiBold'),
@@ -51,7 +51,7 @@
 }
 
 @font-face{
-    font-family: 'OpenSans-Bold', sans-serif;
+    font-family: 'OpenSans-Bold';
     font-weight: 700;
     font-style: normal;
     src: local('OpenSans-Bold'),
@@ -61,7 +61,7 @@
 }
 
 @font-face{
-    font-family: 'Roboto-Medium', sans-serif;
+    font-family: 'Roboto-Medium';
     font-weight: 500;
     font-style: normal;
     src: local('Roboto-Medium'),
@@ -71,7 +71,7 @@
 }
 
 @font-face{
-    font-family: 'OpenSans-Regular', sans-serif;
+    font-family: 'OpenSans-Regular';
     font-weight: 400;
     font-style: normal;
     src: local('OpenSans-Regular'),
@@ -81,7 +81,7 @@
 }
 
 @font-face{
-    font-family: 'Ruda-Black', sans-serif;
+    font-family: 'Ruda-Black';
     font-weight: 900;
     font-style: normal;
     src: local('Ruda-Black'),
@@ -91,7 +91,7 @@
 }
 
 @font-face{
-    font-family: 'Ruda-Bold', sans-serif;
+    font-family: 'Ruda-Bold';
     font-weight: 700;
     font-style: normal;
     src: local('Ruda-Bold'),
@@ -101,7 +101,7 @@
 }
 
 @font-face{
-    font-family: 'Ruda-Regular', sans-serif;
+    font-family: 'Ruda-Regular';
     font-weight: 400;
     font-style: normal;
     src: local('Ruda-Regular'),
@@ -111,7 +111,7 @@
 }
 
 @font-face{
-    font-family: 'Ruda-SemiBold', sans-serif;
+    font-family: 'Ruda-SemiBold';
     font-weight: 600;
     font-style: normal;
     src: local('Ruda-SemiBold'),
