--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,16 +5,18 @@
 @import 'global';
 
 .header {
-    letter-spacing: 3%;
+    letter-spacing: calc(1px / 3);
     &__top{
         background-color: rgba(49, 53, 43, 1);
     }
     &__menu{
         display: flex;
         justify-content: space-between;
-        padding: 14px 0;
+        padding: 16px 0;
         color: #fff;
         text-transform: uppercase;
+        @extend %opensans-700;
+        font-size: 13px;
     }
     &__inner {
         background-color: $accent;
@@ -28,16 +30,15 @@
     }
 }
 
-.menu {
-    font-size: 13px;
-    font-weight: 700; 
+.menu { 
     &__contacts-list,
     &__main-list {
         display: flex;
     }
     &__contacts-link{
         position: relative;
-        padding-left: 33px;
+        padding-left: 38px;
+        margin-left: 12px;
         &:hover{
             opacity: 0.7;
         }
@@ -70,7 +71,7 @@
     width: 32px;
     height: 22px;
     top: -5px;
-    left: -10px;
+    left: 0;
 }
 .menu__contacts-link--tel::before {
     background-image: url('../images/icon-tel.svg');
@@ -160,7 +161,7 @@
     &__main{
         border: none;
         padding: 15px 52px;
-        width: 420px;
+        width: 425px;
         max-width: 100%;  
         border-radius: 6px 0 0 6px;  
     }
@@ -174,7 +175,8 @@
         color: #fff;
         border-radius: 0 6px 6px 0;
         cursor: pointer;
-        margin-right: 35px;
+        margin-right: 55px;
+        text-transform: uppercase;
         &:hover{
             background-color: #31352BD9;
         }
@@ -306,11 +308,22 @@
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
+            padding: 0 7px;
+            &:hover{
+                opacity: 0.5;
+            }
+            &:focus{
+                border: 3px solid #E0EDCF;
+                border-radius: 6px;
+            }
         }
         
     }
     &__contacts p:not(:last-child){
         margin-bottom: 18px;
+    }
+    &__icon:hover{
+        fill: red;
     }
 }
 
@@ -326,7 +339,7 @@
 }
 
 .logo{
-    margin-right: 25px;
+    margin-right: 30px;
 }
 
 .logo__footer{
@@ -349,10 +362,9 @@
     &__item{
         background-color: rgba(255, 255, 255, 0.8);
         padding: 24px 0;
+        margin-top: 142px;
     }
     &__content{
-        max-width: 780px;
-        width: 100%;
         padding: 0 24px;
         color: $title;
     }
@@ -376,10 +388,10 @@
         width: 60px;
         height: 60px;
         position: absolute;
-        top: 50%;
+        top: 44%;
     }
     &__next{
-        right: 2%;
+        right: 1%;
     }
     &__prev{
         left: 100px;
@@ -393,6 +405,17 @@
     border-radius: 6px;
     display: inline-block;
     background-color: $accent;
+    &:hover{
+        background-color: #4D810C;
+    }
+    &:focus{
+        box-shadow: 0 4px 4px #E0EDCF; 
+    }
+    &:active{
+        box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
+    }
+
+
 }
 .link--products{
     background-color: #fff;
@@ -567,6 +590,39 @@
     &__link-img{
         display: inline-block;
         margin-bottom: 18px;
+        position: relative;
+        z-index: 2;
+    }
+    &__link-img::after{
+        content: "";
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0);
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 3;
+        transition: background-color 0.2s;
+    }
+    &__link-img:hover::after{
+        background-color: rgba(0, 0, 0, 0.1);
+    }
+    &__link-img::before{
+        content: "";
+        position: absolute; 
+        background-image: url('../images/icons/img-seach.svg'); 
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        z-index: 3;
+        top: 38%;
+        left: 42%;
+        width: 48px;
+        height: 48px;
+        display: none;
+    }
+    &__link-img:hover::before{
+        display: block;
     }
     &__link-title{
         display: block;
