added colors, first hm freshok

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,6 +1,15 @@
 $accent: #63A60E;
+$accent-2: #E0EDCF;
+$accent-dark: #4D800C;
 $default: #121212;
 $title: #505050;
+$topbottom: #31352B;
+$white: #fff;
+$black: #000;
+$number: #CF3E3B;
+$subtitle: rgba(207, 62, 59, 1);
+$fav: rgba(255, 184, 0, 1);
+$border: rgba(193, 193, 193, 1);
 
 %lato-500{
     font-family: 'Lato-Regular', sans-serif;
