--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,13 +7,13 @@
 .header {
     letter-spacing: calc(1px / 3);
     &__top{
-        background-color: rgba(49, 53, 43, 1);
+        background-color: $topbottom;
     }
     &__menu{
         display: flex;
         justify-content: space-between;
         padding: 16px 0;
-        color: #fff;
+        color: $white;
         text-transform: uppercase;
         @extend %opensans-700;
         font-size: 13px;
@@ -25,8 +25,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 25px 0;
-        
+        padding: 25px 0;   
     }
 }
 
@@ -39,52 +38,47 @@
         position: relative;
         padding-left: 38px;
         margin-left: 12px;
+        display: block;
         &:hover{
             opacity: 0.7;
         }
         &:active{
-            color: #E0EDCF;
+            color: $accent-2;
         }
+    }
+    &__contacts-link::before{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-position: left top;
+        background-repeat: no-repeat;
+        background-size: contain; 
+    }
+    &__contacts-link--address::before {
+        background-image: url('../images/icon-del-address.svg');
+        width: 32px;
+        height: 22px;
+        top: -5px;
+        left: 0;
+    }
+    &__contacts-link--tel::before {
+        background-image: url('../images/icon-tel.svg');
+        width: 22px;
+        height: 22px;
     }
     &__main-link{
         &:focus{
-            border: 3px solid #EFF6E7;
+            border: 3px solid $accent-2;
             border-radius: 3px;
         }
     }
-}
-
-
-
-.menu__contacts-link::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-position: left top;
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-.menu__contacts-link--address::before {
-    background-image: url('../images/icon-del-address.svg');
-    width: 32px;
-    height: 22px;
-    top: -5px;
-    left: 0;
-}
-.menu__contacts-link--tel::before {
-    background-image: url('../images/icon-tel.svg');
-    width: 22px;
-    height: 22px;
-}
-
-.menu__contacts-item:not(:last-child) {
-    margin-right: 48px;
-}
-
-.menu__main-item:not(:last-child) {
-    margin-right: 24px;
+    &__contacts-item:not(:last-child) {
+        margin-right: 48px;
+    }
+    &__main-item:not(:last-child) {
+        margin-right: 24px;
+    }
 }
 
 .catalog {
@@ -99,7 +93,35 @@
     border-radius: 6px;
     width: 240px;
     position: relative;
-    background-color: #fff;
+    background-color: $white;
+        &:hover{
+            border-radius: 6px 6px 0 0;
+            background-color: $accent-2;
+        }
+    }
+    &__btn::before{
+        content: "";
+        position: absolute;
+        top: 20px;
+        right: 15%;
+        background-image: url('../images/header-arrow.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 4px;
+        height: 7px;
+    }
+    &__btn::after{
+        content: "";
+        position: absolute;
+        top: 15px;
+        left: 10%;
+        background-image: url('../images/nav_icon.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 24px;
+        height: 17px;
     }
     &__menu-list{
         display: none;
@@ -111,9 +133,20 @@
         min-width: 100%;
     }
     &__menu-item{
-    background-color: #fff;
+    background-color: $white;
     height: 50px;
     border: 1px solid rgba(193, 193, 193, 0.3);
+        &:hover{
+            border-left: 3px solid $accent;
+            color: $accent;
+        }
+        &:focus{
+            box-shadow: inset 0 0 0 3px $accent-2;
+            color: $black;
+        }
+        &:active{
+            color: rgba(193, 193, 193, 1);
+        }
     }
     &__menu-link{
         display: block;
@@ -121,39 +154,10 @@
     }
 }
 
-.catalog__btn:hover{
-    border-radius: 6px 6px 0 0;
-    background-color: rgba(224, 237, 207, 1);
-}
 .catalog:hover .catalog__menu-list{
     display: block;
 }
 
-.catalog__btn::before{
-    content: "";
-    position: absolute;
-    top: 20px;
-    right: 15%;
-    background-image: url('../images/header-arrow.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 4px;
-    height: 7px;
-}
-
-.catalog__btn::after{
-    content: "";
-    position: absolute;
-    top: 15px;
-    left: 10%;
-    background-image: url('../images/nav_icon.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 24px;
-    height: 17px;
-}
 
 .search{
     display: flex;
@@ -166,13 +170,13 @@
         border-radius: 6px 0 0 6px;  
     }
     &__main::placeholder{
-        color: rgba(49, 53, 43, 1);
+        color: #31352BD9;
         font-weight: 400;
     }
     &__btn{
         padding: 15px 52px;
-        background-color: #000;
-        color: #fff;
+        background-color: $black;
+        color: $white;
         border-radius: 0 6px 6px 0;
         cursor: pointer;
         margin-right: 55px;
@@ -181,7 +185,7 @@
             background-color: #31352BD9;
         }
         &:focus{
-            box-shadow: inset 0 0 0 4px #E0EDCF;
+            box-shadow: inset 0 0 0 4px $accent-2;
         }
         &:active{
             background-color:rgba(49, 53, 43, 1);           
@@ -208,16 +212,23 @@
     align-items: center;
     &__link{
         position: relative;
-    }
-    &__link-img{
-        padding: 9px 13px;
+        padding: 9px 10px 5px;
         &:hover{
-            background-color:rgba(255, 255, 255, 0.1);
+            background-color: $white;
             border-radius: 3px;
         }
         &:focus{
-            border: 3px solid #E0EDCF;
+            box-shadow: inset 0 0 0 3px $accent-2;
+            border-radius: 6px;
         }
+        &:active{
+            box-shadow: none;
+        }
+    }
+    &__link-img{
+        fill: $white;
+        width: 30px;
+        height: 32px;
         &:active{
             opacity: 0.2;
         }
@@ -229,8 +240,8 @@
         width: 18px;
         height: 18px;
         border-radius: 50%;
-        background-color: #fff;
-        color: #CF3E3B;
+        background-color: $white;
+        color: $number;
         text-align: center;
         font-size: 10px;
         line-height: 18px;
@@ -241,8 +252,8 @@
 
 .footer {
     padding: 15px 0 40px;
-    background-color: #31352B;
-    color: #fff;
+    background-color: $topbottom;
+    color: $white;
 }
 
 .footer-top {
@@ -262,21 +273,21 @@
             max-width: 100%;
             padding: 12px;
             border-radius: 6px 0 0 6px;
-            background-color: #fff;
+            background-color: $white;
             line-height: 1;
         }
         &__btn{
             background-color: $accent;
-            color: #fff;
+            color: $white;
             padding: 12px 16px;
             font-size: 12px;
             text-transform: uppercase;
             border-radius: 0 6px 6px 0;
             &:hover{
-                background-color: #4D800C;
+                background-color: $accent-dark;
             }
             &:focus{
-                box-shadow: inset 0 0 0 4px #E0EDCF;
+                box-shadow: inset 0 0 0 4px $accent-2;
             }
             &:active{
                 box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -303,27 +314,30 @@
         }
         &__link{
             display: block;
-            width: 31px;
+            width: 32px;
             height: 32px;
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
-            padding: 0 7px;
-            &:hover{
-                opacity: 0.5;
-            }
             &:focus{
-                border: 3px solid #E0EDCF;
-                border-radius: 6px;
+                box-shadow: 0 0 0 3px $accent-2;
+                border-radius: 3px;
+            }
+            &:active{
+                box-shadow: none;
             }
         }
-        
+        &__icon{
+            width: 31px;
+            height: 32px;
+            fill: #fff;
+            &:hover{
+                opacity: 0.7;
+            } 
+            &:active{
+                fill: $accent-2;
+            }  
+        }
     }
     &__contacts p:not(:last-child){
         margin-bottom: 18px;
-    }
-    &__icon:hover{
-        fill: red;
     }
 }
 
@@ -334,6 +348,9 @@
         display: flex;
         justify-content: space-between; 
         align-items: center;
+    }
+    &__accept:not(:last-child){
+        margin-right: 24px;
     }
     
 }
@@ -357,12 +374,12 @@
     height: 600px;
     // display: flex;
     // justify-content: center;
-    // align-items: center; это работает!! понять, почему там инлайн
+    // align-items: center; 
     }
     &__item{
         background-color: rgba(255, 255, 255, 0.8);
         padding: 24px 0;
-        margin-top: 142px;
+        // margin-top: 142px;
     }
     &__content{
         padding: 0 24px;
@@ -379,7 +396,7 @@
         text-transform: uppercase;
         &__subtitle{
             font-weight: 700;
-            color: rgba(207, 62, 59, 1);
+            color: $subtitle;
             display: block;
         }
     }
@@ -389,12 +406,13 @@
         height: 60px;
         position: absolute;
         top: 44%;
+        z-index: 2;
     }
     &__next{
         right: 1%;
     }
     &__prev{
-        left: 100px;
+        left: 1%;
     }
 }
 
@@ -406,10 +424,10 @@
     display: inline-block;
     background-color: $accent;
     &:hover{
-        background-color: #4D810C;
+        background-color: $accent-dark;
     }
     &:focus{
-        box-shadow: 0 4px 4px #E0EDCF; 
+        box-shadow: 0 4px 4px $accent-2; 
     }
     &:active{
         box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -418,14 +436,14 @@
 
 }
 .link--products{
-    background-color: #fff;
+    background-color: $white;
     border: 1px solid $accent;
     color: $accent;
     &:hover{
         background-color: rgba(239, 246, 231, 1);
     }
     &:focus{
-        box-shadow: 0 4px 4px #E0EDCF;
+        box-shadow: 0 4px 4px $accent-2;
     }
     &:active{
         box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -465,7 +483,7 @@
         padding-right: 17px;
     }
     &__title{
-        color: #121212;
+        color: $default;
         @extend %opensans-600;
         font-size: 16px;
         margin-bottom: 6px;
@@ -508,16 +526,16 @@
         background: transparent;
         color: $title;
         &:hover{
-            color: #63A60E;
+            color:$accent;
         }
         &:focus{
-            box-shadow: inset 0 0 0 4px #E0EDCF; 
+            box-shadow: inset 0 0 0 4px $accent-2; 
             border-radius: 6px;
             border: none;
         }
         &:active{
             box-shadow: none;
-            border-bottom: 3px solid #E0EDCF;
+            border-bottom: 3px solid $accent-2;
             border-radius: 0;
         }
     }
@@ -531,7 +549,7 @@
     &__card{
        border: 1px solid #C1C1C1;
        border-radius: 6px; 
-       padding: 57px 0 18px;
+       padding: 12px 0 18px;
        max-width: 300px;
        width: 100%;
        height: 410px;
@@ -541,53 +559,49 @@
        position: relative;
        text-align: start;
     }
-    &__card::after{
-        content: "";
+    &__card-top{
         position: absolute;
-        background-size: contain;
-        background-position: top left;
-        background-repeat: no-repeat;
-        top: 12px;
-        left: 12px;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 0 12px;
     }
-    &__card::before{
-        content: "";
-        position: absolute;
-        background-size: contain;
-        background-position: top left;
-        background-repeat: no-repeat;
+    &__card-label{
+        display: flex;
+        flex-direction: column;
     }
-    &__card--new::after{
-        background-image: url('../images/new.svg');
-        width: 66px;
-        height: 16px;  
+    &__card-label img:not(:last-child){
+        margin-bottom: 6px;
     }
-    &__card--sale::after{
-        background-image: url('../images/sale.svg');
-        width: 37px;
-        height: 16px;
+    &__inner-icon{
+        background-color: transparent;
+        width: 44px;
+        height: 44px;
+        &:focus{
+            box-shadow: inset 0 0 0 3px $accent-2; 
+            border-radius: 3px;
+        } 
+        &:active{
+            box-shadow: none;
+        }        
     }
-    &__card--sale-first::before{
-        background-image: url('../images/sale.svg');
-        width: 37px;
-        height: 16px;
-        left: 12px;
-        top: 34px;
-    }
-    &__card--hit::after{
-        background-image: url('../images/hit.svg');
-        width: 34px;
-        height: 16px;
-    }
-    &__card--fav::before{
-        background-image: url('../images/icons/icon-heart.svg');
+    &__card-fav{
         width: 32px;
         height: 28px;
-        top: 17px;
-        right: 12px;
+        fill: rgba(193, 193, 193, 1);
         cursor: pointer;
+        &:hover{
+            fill: $fav;
+        } 
+        
+        &:active{
+            fill: $fav;
+            opacity: 0.5;
+
+        }
     }
     &__link-img{
+        margin-top: 57px;
         display: inline-block;
         margin-bottom: 18px;
         position: relative;
@@ -627,38 +641,60 @@
     &__link-title{
         display: block;
         padding: 0 18px;
+        @extend %opensans-600;
     }
     &__card-footer{
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
         padding: 0 18px;
+        line-height: 1;
+    }
+    &__old-price{
+        margin-bottom: 3px;
+        position: relative;
+        color: rgba(193, 193, 193, 1);
+    }
+    &__old-price::after{
+        content: "";
+        position: absolute;
+        border-bottom: 1px solid rgba(193, 193, 193, 1);
+        top: 0;
+        right: 0;
+        width: 100%;
+        transform: rotate(-12deg);
+        height: 50%;
     }
     &__btn{
-        position: relative;
         width: 32px;
         height: 32px;
         background-color: $accent;
         border-radius: 3px;
+        &:hover{
+            background-color: $accent-dark;
+        }
+        &:focus{
+            box-shadow: 0 0 0 4px $accent-2; 
+            border-radius: 6px;
+        }
+        &:active{
+            box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
+        }
     }
-    &__btn::after{
-        content: "";
-        position: absolute;
-        background-image: url('../images/icons/icon-card.svg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: contain;
-        width: 32px;
-        height: 32px;
-        top: 0;
-        left: 0;
+    &__icon{
+        width: 16px;
+        height: 16px;
+        fill: $white;
+        &:active{
+            opacity: 0.5;
+        }
     }
-
 }
 
 .mixitup-control-active{
-    border-bottom: 3px solid #E0EDCF;
+    border-bottom: 3px solid $accent-2;
 }
+
 
 
 @import 'media'; 
